fix settings button on mobile

--- a/styles/app.css
+++ b/styles/app.css
@@ -127,14 +127,6 @@ hr {
     margin: 0 14%;
 }
 
-@media only screen and (min-width: 768px) {
-    #logo {
-        width: 420px;
-        display: block;
-        margin: auto;
-    }
-}
-
 .external .internal-only {
     display: none;
 }
@@ -188,16 +180,36 @@ hr {
     color: #fff;
 }
 
-#SettingsScreen{
-    display:none;
+#SettingsScreen {
+    display: none;
 }
 
-#settingsToggle{
-    background: transparent; 
+#settingsToggle {
+    background: transparent;
     box-shadow: none;
-    border:none;
+    border: none;
 }
 
-#settingsToggle .glyphicon{
+#settingsToggle .glyphicon {
     font-size: 24px;
+}
+
+@media only screen and (min-width: 768px) {
+    #logo {
+        width: 420px;
+        display: block;
+        margin: auto;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .navbar-right {
+        position: absolute;
+        top: -5px;
+        right: 15px;
+    }
+    .navbar-default .navbar-nav>li>a:hover,
+    .navbar-default .navbar-nav>li>a:focus {
+        background-color: transparent;
+    }
 }
